Add /stations route
